--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
       href="https://unpkg.com/boxicons@latest/css/boxicons.min.css"
     />
-    <title>Inkoop Assignment</title>
+    <title>Meals.com</title>
   </head>
   <body>
     <div class="navbar">
